--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": false,
-		"moduleResolution": "node",
+		"moduleResolution": "bundler",
 		"verbatimModuleSyntax": true,
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
