--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
 		"@types/natural": "^5.1.2",
 		"compressorjs": "^1.2.1",
 		"dotenv": "^16.1.4",
+		"front-piter-chat-bot": "file:",
 		"fuse.js": "^6.6.2",
+		"mode-watcher": "^0.4.1",
 		"natural": "^6.5.0",
 		"socket.io-client": "^4.6.2",
 		"sweetalert2": "^11.7.12"
