--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.0"
 	},
+	"engines": {
+		"node": "20.x"
+	},
 	"type": "module",
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.363.0",
